--- a/css/main.css
+++ b/css/main.css
@@ -1,102 +1,76 @@
 all {
-    font-family:"Helvetica Neue",Helvetica,Arial,"Hiragino Sans GB","Hiragino Sans GB W3","WenQuanYi Micro Hei",sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, "Hiragino Sans GB", "Hiragino Sans GB W3", "WenQuanYi Micro Hei", sans-serif;
 }
-
 body {
-    text-align: center;
+  text-align: center;
 }
-
-#logo {
-    display: block;
-    height: 40px;
-    width: 240px;
-    margin: 0 auto;
-    margin-bottom: 8px;
-/*    background-color: azure;*/
-}
-
-#info{
-    align-content: center;
-}
-
-.tab-content input {
-    margin-top: 8px;
-}
-
-.tab-content a {
-    margin: 8px 0 8px 0;
-}
-
-input.btn {
-    margin-top: 20px;
-}
-
 #container {
-    padding: 8px 1px 0 1px;
-    max-width: 260px;
-/*    min-width: 260px;*/
-    background-color: whitesmoke;
+  padding: 8px 1px 0 1px;
+  max-width: 260px;
+  background-color: whitesmoke;
 }
-
-#info a {
-    margin-top: 8px;
+#logo {
+  display: block;
+  height: 40px;
+  width: 240px;
+  margin: 0 auto;
+  margin-bottom: 8px;
 }
-
-#avatar {
-    display: block;
-    margin: 0 auto;
-    max-width: 100px;
-}
-
-section#nickname {
-    font-family: cursive;
-    font-weight: bold;
-}
-
 .tab-pane {
-    padding: 10px 0 10px 0;
-    background-color: white;
+  padding: 10px 0 10px 0;
+  background-color: white;
 }
-
-#copyright {
-    color: rgba(94, 94, 94, 0.8);
-    font-size: smaller;
+.tab-pane input.form-control {
+  margin-top: 8px;
 }
-
+.tab-pane a.button {
+  margin: 8px 0 8px 0;
+}
+.tab-pane input[type="submit"] {
+  margin-top: 20px;
+}
+#info {
+  align-content: center;
+}
+#info #avatar {
+  display: block;
+  margin: 0 auto;
+  max-width: 100px;
+}
+#info section#nickname {
+  font-family: cursive;
+  font-weight: bold;
+}
 #settings {
-    text-align: left;
-    padding-left: 50px;
+  text-align: left;
+  padding-left: 50px;
+}
+#settings .settingTitle {
+  font-weight: bold;
+  margin-right: 5px;
+}
+#settings #setting2 {
+  margin-top: 8px;
+}
+#settings #setting2 .settingTitle {
+  vertical-align: top;
+}
+#settings #setting2 .radioGroup {
+  display: inline-block;
+}
+#settings #setting2 .choice {
+  margin: 0 0 5px 5px;
+}
+#settings #setting3 {
+  margin-top: 1px;
+}
+#settings #setting3 #maxnInput {
+  max-width: 30px;
+  margin-right: 5px;
+}
+#copyright {
+  color: rgba(94, 94, 94, 0.8);
+  font-size: smaller;
 }
 
-#settings input {
-}
-
-.settingTitle {
-    font-weight: bold;
-    margin-right: 5px;
-}
-
-.radioGroup {
-    display: inline-block;
-}
-
-.choice {
-    margin: 0 0 5px 5px;
-}
-
-#setting2 {
-    margin-top: 8px;
-}
-
-#setting2 .settingTitle {
-    vertical-align: top;
-}
-
-#setting3 {
-    margin-top: 1px;
-}
-
-#setting3 #maxnInput {
-    max-width: 30px;
-    margin-right: 5px;
-}
+/* This beautiful CSS-File has been crafted with LESS (lesscss.org) and compiled by simpLESS (wearekiss.com/simpless) */
